corrected contrast to match WCAG AAA standard

--- a/client/styles/abstracts/_variables.scss
+++ b/client/styles/abstracts/_variables.scss
@@ -174,7 +174,7 @@ $themes: (
 );
 
 $console-warn-color: #ffbe05;
-$console-error-color: #ff5f52;
+$console-error-color: #FFEAE5;
 
 $toast-background-color: #4A4A4A;
 $toast-text-color: $white;
